fix: blur effect not centered

--- a/assets/styles/global.scss
+++ b/assets/styles/global.scss
@@ -551,7 +551,7 @@ a.has-text-grey {
   position: relative;
   .blur {
       position: absolute !important;
-      top: -8px;
-      left: -8px;
+      top: -4px;
+      left: -4px;
     }
 }
